{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "8c328707-afd1-4452-b3a9-ed01e70fc8de",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e2b3f8b2-4ab2-4d6d-8dca-5b823159b5a0",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "f5d8c3da-30ae-42cf-adcc-c2cd3b40326a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f06d4b12-8bf9-40fb-9036-f696c1381e9a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "abbf3489-7888-4e4f-a7aa-e31a62bfee78",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "05b6a109-9f70-436b-880b-a63239e1ed9b",
                    "path": "<Keyboard>/W",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fd1a114d-b223-44b9-bf3c-64ae179801ad",
                    "path": "<Keyboard>/S",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "565d4455-4b54-41dc-a8d7-0551a1a96bc2",
                    "path": "<Keyboard>/A",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0c4e61df-4cbb-4c26-8e36-3d017fe500ba",
                    "path": "<Keyboard>/D",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3e6c9881-389a-4485-8262-020c059ede55",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73832e73-b9fd-491e-bf09-cf6e81603388",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}